--- a/SM-FB-BOT-TMR/pom.xml
+++ b/SM-FB-BOT-TMR/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>messenger4j</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
